--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
 	</head>
 <body>
 	<h1>welcome</h1>
+	<form action="main.html">
+		Userid : <input type="text">
+		password : <input type="password">
+		<button>submit</button>
+	</form>
 </body>
 </html>
