--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
 	</head>
 <body>
 	<h1>welcome</h1>
-	<form action="main.html">
-		Userid : <input type="text">
+	<form id="login" action="main.html">
+		User id : <input type="text">
 		password : <input type="password">
 		<button>submit</button>
 	</form>
+	<form id = "signup" action="main.html">
+			Userid : <input type="text">
+			Set password : <input type="password">
+			retype password : <input type="password">
+			<button>submit</button>
+		</form>
+
 </body>
 </html>
