added css folder

--- a/index.html
+++ b/index.html
@@ -2,20 +2,28 @@
 <html>
 	<head>
 		<title>Home</title>
+
+		<link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css" />
+		<link rel="stylesheet" type="text/css" href="css/paper.min.css">
+		<link rel="stylesheet" type="text/css" href="css/mainpage.css">
 	</head>
 <body>
-	<h1>welcome</h1>
-	<form id="login" action="main.html">
-		User id : <input type="text">
-		password : <input type="password">
-		<button>submit</button>
-	</form>
-	<form id = "signup" action="main.html">
-			Userid : <input type="text">
-			Set password : <input type="password">
-			retype password : <input type="password">
-			<button>submit</button>
-		</form>
+	<container>
+			<div style="padding-bottom: 13vh"  >
+				<h1>welcome</h1>
+					<form id="login" action="main.html">
+						User id : <input type="text">
+						password : <input type="password">
+						<button>submit</button>
+					</form>
+					<form id = "signup" action="main.html">
+						Userid : <input type="text">
+						Set password : <input type="password">
+						retype password : <input type="password">
+						<button>submit</button>
+					</form>
+				</div>
+	</container>
 
 </body>
 </html>
