--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 	<head>
 		<title>Home</title>
-
 		<link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/paper.min.css">
 		<link rel="stylesheet" type="text/css" href="css/mainpage.css">
@@ -23,6 +22,7 @@
 						<button>submit</button>
 					</form>
 				</div>
+				<div></div>
 	</container>
 
 </body>
